--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -8,4 +8,5 @@
     Description: {{product.description}}
   </p>
   <button click()="share()">share</button>
+  <app-product-alerts [product]="product"> </app-product-alerts>
 </div>
